--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         }
     </style>
 
-    <title>Portfolio | Ludiflex</title>
+    <title>Portfolio </title>
 </head>
 <body>
    <div class="container">
