--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             }
         </script> -->
         <button class="btn">
-            <a href="Resume-Arnav kumar.pdf" download>
+            <a href="Resume-Arnav kumar(9).pdf" download>
                 Download CV <i class="uil uil-file-alt"></i>
             </a>
         </button>
